# ClipFlow-AI

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: export.py  projects.py  segments.py  settings.py
backend/app/core/: audio.py  exporter.py  marker.py  slicer.py  transcribe.py
backend/app/models/: schemas.py  store.py
docs/: GETTING_STARTED.md  PRD.md
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/project/[id]/: page.module.css  page.tsx
frontend/src/lib/: api.ts  utils.ts
