[project]
name = "clipflow-backend"
version = "0.1.0"
description = "ClipFlow AI — 語音標記自動粗剪工具後端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "faster-whisper>=1.1.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
